# AlfredV4

./: main.py  pyproject.toml  script.py
